--- a/index.html
+++ b/index.html
@@ -48,6 +48,106 @@
     </section>
 
 
+    <!-- card section  -->
+
+    <section>
+        <div class="head">
+             <h1 class="plants"><strong style="color: #E95A08;"> Our</strong> Plants</h1>
+            <p class="our">Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+        </div>
+
+        <div class="card-container">
+            <div class="card">
+                <img src="assets/sample-flower-image.png" alt="">
+            <h3>Lily Blossom</h3>
+            <h3>20 USD</h3>
+            <button>ADD TO CARD</button>
+            </div>
+
+            <div class="card">
+                <img src="assets/sample-flower-image.png" alt="">
+            <h3>Lily Blossom</h3>
+            <h3>20 USD</h3>
+            <button>ADD TO CARD</button>
+            </div>
+
+            <div class="card">
+                <img src="assets/sample-flower-image.png" alt="">
+            <h3>Lily Blossom</h3>
+            <h3>20 USD</h3>
+            <button>ADD TO CARD</button>
+            </div>
+
+            <div class="card">
+                <img src="assets/sample-flower-image.png" alt="">
+            <h3>Lily Blossom</h3>
+            <h3>20 USD</h3>
+            <button>ADD TO CARD</button>
+            </div>
+
+            <div class="card">
+                <img src="assets/sample-flower-image.png" alt="">
+            <h3>Lily Blossom</h3>
+            <h3>20 USD</h3>
+            <button>ADD TO CARD</button>
+            </div>
+
+            <div class="card">
+                <img src="assets/sample-flower-image.png" alt="">
+            <h3>Lily Blossom</h3>
+            <h3>20 USD</h3>
+            <button>ADD TO CARD</button>
+            </div>
+
+            <div class="card">
+                <img src="assets/sample-flower-image.png" alt="">
+            <h3>Lily Blossom</h3>
+            <h3>20 USD</h3>
+            <button>ADD TO CARD</button>
+            </div>
+
+            <div class="card">
+                <img src="assets/sample-flower-image.png" alt="">
+            <h3>Lily Blossom</h3>
+            <h3>20 USD</h3>
+            <button>ADD TO CARD</button>
+            </div>
+
+
+        </div>
+
+    </section>
+
+
+    <section>
+
+
+        <div class="lover">
+        <div>
+            <img  class="flower-store" src="assets/flower-store.png" alt="">
+            
+        </div>
+        <div>
+            <img class="trust" src="assets/trusted-badge.png" alt="">
+        </div>
+
+
+
+        <div class="plant-lover">
+            <h1>Flower & Plants Lover</h1>
+            <ul>
+                <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li><br>
+                <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li><br>
+                <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li><br>
+            </ul>
+        </div>
+        </div>
+
+
+
+    </section>
+
+
 
 
 
