--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+        integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Flower Market Website</title>
 </head>
-<body class="open-sans-normal">
+
+<body class="noto-serif-normal ">
     <navbar>
         <div class="container">
             <div>
@@ -22,9 +26,10 @@
 
                 <ul class="nav">
                     <li class="nav-item"><a href="" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="" class="nav-link"><span>Shop</span></a></li>
-                <li class="nav-item"><a href="" class="nav-link"><span>About Us</span></a></li>
-                <li class="nav-item"> <i class="fa-solid fa-cart-shopping"></i><a href="" class="nav-link"></a>Cart($56)</li>
+                    <li class="nav-item"><a href="" class="nav-link"><span>Shop</span></a></li>
+                    <li class="nav-item"><a href="" class="nav-link"><span>About Us</span></a></li>
+                    <li class="nav-item"> <i class="fa-solid fa-cart-shopping"></i><a href=""
+                            class="nav-link"></a>Cart($56)</li>
                 </ul>
 
             </div>
@@ -36,9 +41,12 @@
         <div class="flower-container">
 
             <div class="flower-text">
-                <h1> <strong  style=" text-shadow: black 0px 4px 2px ;">ALWAYS </strong><strong style="color: #E95A08; -webkit-text-stroke: 2px black;">FRESH</strong> <br> <strong style="color: #E95A08;">FLOWERS</strong></h1>
+                <h1> <strong style=" text-shadow: black 0px 4px 2px ;">ALWAYS </strong><strong
+                        style="color: #E95A08; -webkit-text-stroke: 2px black;">FRESH</strong> <br> <strong
+                        style="color: #E95A08;">FLOWERS</strong></h1>
 
-                <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
+                <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to
+                    exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
             </div>
             <div class="hero-flower">
                 <img src="assets/hero-flower.png" alt="">
@@ -52,65 +60,66 @@
 
     <section>
         <div class="head">
-             <h1 class="plants"><strong style="color: #E95A08;"> Our</strong> Plants</h1>
-            <p class="our">Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+            <h1 class="plants"><strong style="color: #E95A08;"> Our</strong> Plants</h1>
+            <p class="our">Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic
+                roses to exotic blooms, we offer a wide variety of fresh.</p>
         </div>
 
         <div class="card-container">
             <div class="card">
                 <img src="assets/sample-flower-image.png" alt="">
-            <h3>Lily Blossom</h3>
-            <h3>20 USD</h3>
-            <button>ADD TO CARD</button>
+                <h3>Lily Blossom</h3>
+                <h3>20 USD</h3>
+                <button class="add">ADD TO CARD</button>
             </div>
 
             <div class="card">
                 <img src="assets/sample-flower-image.png" alt="">
-            <h3>Lily Blossom</h3>
-            <h3>20 USD</h3>
-            <button>ADD TO CARD</button>
+                <h3>Lily Blossom</h3>
+                <h3>20 USD</h3>
+                <button class="add">ADD TO CARD</button>
             </div>
 
             <div class="card">
                 <img src="assets/sample-flower-image.png" alt="">
-            <h3>Lily Blossom</h3>
-            <h3>20 USD</h3>
-            <button>ADD TO CARD</button>
+                <h3>Lily Blossom</h3>
+                <h3>20 USD</h3>
+                <button class="add">ADD TO CARD</button>
             </div>
 
             <div class="card">
                 <img src="assets/sample-flower-image.png" alt="">
-            <h3>Lily Blossom</h3>
-            <h3>20 USD</h3>
-            <button>ADD TO CARD</button>
+                <h3>Lily Blossom</h3>
+                <h3>20 USD</h3>
+                <button class="add">ADD TO CARD</button>
             </div>
 
             <div class="card">
                 <img src="assets/sample-flower-image.png" alt="">
-            <h3>Lily Blossom</h3>
-            <h3>20 USD</h3>
-            <button>ADD TO CARD</button>
+                <h3>Lily Blossom</h3>
+                <h3>20 USD</h3>
+                <button class="add">ADD TO CARD</button>
             </div>
 
             <div class="card">
                 <img src="assets/sample-flower-image.png" alt="">
-            <h3>Lily Blossom</h3>
-            <h3>20 USD</h3>
-            <button>ADD TO CARD</button>
+                <h3>Lily Blossom</h3>
+                <h3>20 USD</h3>
+                <button class="add">ADD TO CARD</button>
             </div>
 
             <div class="card">
                 <img src="assets/sample-flower-image.png" alt="">
-            <h3>Lily Blossom</h3>
-            <h3>20 USD</h3>
-            <button>ADD TO CARD</button>
+                <h3>Lily Blossom</h3>
+                <h3>20 USD</h3>
+                <button class="add">ADD TO CARD</button>
             </div>
 
             <div class="card">
                 <img src="assets/sample-flower-image.png" alt="">
-            <h3>Lily Blossom</h3>
-            <h3>20 USD</h3>
-            <button>ADD TO CARD</button>
+                <h3>Lily Blossom</h3>
+                <h3>20 USD</h3>
+                <button class="add">ADD TO CARD</button>
             </div>
 
 
@@ -123,24 +132,27 @@
 
 
         <div class="lover">
-        <div>
-            <img  class="flower-store" src="assets/flower-store.png" alt="">
-            
-        </div>
-        <div>
-            <img class="trust" src="assets/trusted-badge.png" alt="">
-        </div>
+            <div>
+                <img class="flower-store" src="assets/flower-store.png" alt="">
+
+            </div>
+            <div>
+                <img class="trust" src="assets/trusted-badge.png" alt="">
+            </div>
 
 
 
-        <div class="plant-lover">
-            <h1>Flower & Plants Lover</h1>
-            <ul>
-                <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li><br>
-                <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li><br>
-                <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li><br>
-            </ul>
-        </div>
+            <div class="plant-lover">
+                <h1 class="flowers-title">Flower & Plants Lover</h1>
+                <ul>
+                    <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses
+                        to exotic blooms, we offer a wide variety of fresh.</li><br>
+                    <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses
+                        to exotic blooms, we offer a wide variety of fresh.</li><br>
+                    <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses
+                        to exotic blooms, we offer a wide variety of fresh.</li><br>
+                </ul>
+            </div>
         </div>
 
 
@@ -150,8 +162,84 @@
 
 
 
+    <section>
+
+
+        <div class="bloom">
+            <div class="latest">
+                <h1 class="plants"><strong style="color: #E95A08;"> Latest</strong> Deals</h1>
+                <p class="our">Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br>
+                    classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+            </div>
+
+            <!-- two pic  -->
+
+            <div class="multi-pic">
+                <div class="all-pic">
+                    <div>
+                        <div class="bloom-text">
+                            <h4 style=" margin-top: -40px; ">60% Off | Bloom Plant</h4>
+                            <a style=" text-decoration: underline; cursor: pointer;"><strong>Shop Now</strong></a>
+
+                        </div>
+                        <img class="bloom-pic" src="assets/deal-bloom.png" alt="">
+                    </div>
+
+
+                    <div>
+                        <div class="bloom-text">
+                            <h4 style=" margin-top: -40px; ">30% Off | Ana Plant</h4>
+                            <a style=" text-decoration: underline; cursor: pointer;"><strong>Shop Now</strong></a>
+
+                        </div>
+                        <img class="bloom-pic" src="assets/deal-ana.png" alt="">
+                    </div>
+                </div>
+
+
+
+                <!-- full pic  -->
+
+                <div class="full-pic">
+                    <div>
+                        <div class="bloom-text">
+                            <h4 style=" margin-top: 80px; margin-left: 60px; font-size: 50px; margin-bottom: 35px; ">25%
+                                Off | Zabo Plant</h4>
+                            <a
+                                style=" text-decoration: underline; cursor: pointer; text-decoration: underline; font-size: 25px ; "><strong>Shop
+                                    Now</strong></a>
+
+                        </div>
+                        <img class="bloom-pic" src="assets/deal-zabo.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+    <section>
+        <div class="cover-pic">
+            <div>
+                <h1 class="bunch">Join the colorful Bunch</h1>
+                <div class="subscribe" action="">
+                    <input type="text" placeholder="Write mail" name="search">
+                    <button type="submit"><i class=""></i>Subscribe</button>
+                </div>
+            </div>
+            <div class="background">
+                <img src="assets/news-letter-bg.png" alt="">
+            </div>
+        </div>
+    </section>
+
+
+
+
 
 
 
 </body>
+
 </html>
