--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="flower-container">
 
             <div class="flower-text">
-                <h1> <strong style=" text-shadow: black 0px 4px 2px ;">ALWAYS </strong><strong
+                <h1> <strong>ALWAYS </strong><strong
                         style="color: #E95A08; -webkit-text-stroke: 2px black;">FRESH</strong> <br> <strong
                         style="color: #E95A08;">FLOWERS</strong></h1>
 
@@ -224,9 +224,9 @@
         <div class="cover-pic">
             <div>
                 <h1 class="bunch">Join the colorful Bunch</h1>
-                <div class="subscribe" action="">
+                <div class="subscribe">
                     <input type="text" placeholder="Write mail" name="search">
-                    <button type="submit"><i class=""></i>Subscribe</button>
+                    <button type="submit">Subscribe</button>
                 </div>
             </div>
             <div class="background">
